--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,12 @@
 title: Slivka Development Blog
 email: mmwarowny@dundee.ac.uk
 description: "" # this means to ignore newlines until "baseurl:"
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/slivka-blog" # the subpath of your site, e.g. /blog
+url: "https://warownia1.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  warownia1
+
+markdown: kramdown
 
 # Build settings
 theme: minima
