--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Slivka Development Blog
-email: mmwarowny@dundee.ac.uk
+email: mmzwarowny@dundee.ac.uk
 description: "" # this means to ignore newlines until "baseurl:"
 baseurl: "/slivka-blog" # the subpath of your site, e.g. /blog
 url: "https://warownia1.github.io" # the base hostname & protocol for your site, e.g. http://example.com
