--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,10 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Slivka Development Blog
-email: mmzwarowny@dundee.ac.uk
+email: warownym@gene.com
 description: >- # this means to ignore newlines until "baseurl:"
+  This is my slivka development blog where I describe features, gather ideas and analyse
+  different problems encountered during my work.
 baseurl: "/slivka-blog" # the subpath of your site, e.g. /blog
 url: "https://warownia1.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
